--- a/almostauto-web/src/almostauto/web/components/Base.jinja
+++ b/almostauto-web/src/almostauto/web/components/Base.jinja
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 
 <head>
     <title>almost automated</title>
-    <script src="https://unpkg.com/htmx.org@2.0.1"></script>
+    <script src="https://unpkg.com/htmx.org@2.0.2" integrity="sha384-Y7hw+L/jvKeWIRRkqWYfPcvVxHzVzn5REgzbawhxAuQGwX1XWe70vji+VSeHOThJ" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/htmx-ext-json-enc@2.0.0/json-enc.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link href="/static/style.css" rel="stylesheet" />
 </head>
 
 <body>
     <div class="flex">
-        <nav id="sidebar" class="w-1/6  min-h-screen bg-blue-500 text-slate-100 py-4">
-            <a href="/" class="font-sans text-xl font-semibold px-2 py-4 text-left">almost auto<span class="text-slate-300">mated</span></a>
+        <nav id="sidebar" class="menu w-1/6  min-h-screen py-4">
+            <a href="/" class="menu-title text-neutral-content">almost <span class="text-primary">auto</span>mated</a>
             <ul>
-                <li>
-                    <a href="/runbooks" class="hover:bg-gradient-to-r from-blue-300 px-2 py-1 block min-w-full" hx-get="/runbooks" hx-target="#content">Runbooks</a>
-                    <ul class="pl-4">
-                        <li class="hover:bg-gradient-to-r from-blue-300 px-2 py-1"><a href="/templates" hx-get="/templates" hx-target="#content">Templates</a></li>
-                    </ul>
-                </li>
+                <li><a href="/runbooks" hx-get="/runbooks" hx-target="#content">Runbooks</a></li>
+                <li><a href="/templates" hx-get="/templates" hx-target="#content">Templates</a></li>
             </ul>
         </nav>
-        <div id="content" class="w-full bg-gray-200 py-4" hx-target="this">{{ content }}</div>
+        <div id="content" class="w-full py-4" hx-target="this">{{ content }}</div>
     </div>
 </body>
 
