--- a/almostauto-web/src/almostauto/web/components/EditTemplatePage.jinja
+++ b/almostauto-web/src/almostauto/web/components/EditTemplatePage.jinja
@@ -1,5 +1,5 @@
 {#def template, steps #}
 
 <Base>
-    <template.EditTemplateContent template={{ template }} steps={{ steps }} />
+    <templates.EditTemplateContent template={{ template }} steps={{ steps }} />
 </Base>
