--- a/almostauto-web/src/almostauto/web/components/template_steps/EditForm.jinja
+++ b/almostauto-web/src/almostauto/web/components/template_steps/EditForm.jinja
@@ -1,7 +1,7 @@
 {#def template_id, step #}
 
 <form hx-put="/templates/{{ template_id }}/steps/{{ step.number }}" hx-target="this" hx-swap="outerHTML" hx-ext="json-enc">
-    <label for="title">Title</label>
-    <input name="title" type="text" value="{{ step.title }}">
-    <button type="submit">Submit</button>
+    <label for="title" class="label">Title</label>
+    <input name="title" type="text" value="{{ step.title }}" class="input-bordered">
+    <button class="btn btn-outline btn-primary" type="submit">Submit</button>
 </form>
