--- a/almostauto-web/src/almostauto/web/components/templates/TemplatesListControls.jinja
+++ b/almostauto-web/src/almostauto/web/components/templates/TemplatesListControls.jinja
@@ -1,4 +1,4 @@
-<div class="flex flex-row m-4 p-2 max-dvw border border-solid border-black rounded">
+<div class="navbar bg-base-100">
     <h2 class="p-2 text-xl">Templates</h2>
-    <a href="/templates/new" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 my-2">New</a>
+    <a href="/templates/new" role="button" class="btn btn-primary">New</a>
 </div>
