--- a/almostauto-web/src/almostauto/web/components/templates/EditTemplateContent.jinja
+++ b/almostauto-web/src/almostauto/web/components/templates/EditTemplateContent.jinja
@@ -1,9 +1,9 @@
 {#def template, steps #}
 
 <div hx-target="this" hx-swap="innerHTML">
-    <div id="controls">
-        <button hx-get="/templates/{{ template.id }}/edit" hx-target="#template">Edit</button>
-        <button hx-delete="/templates/{{ template.id }}" hx-push-url="/templates" hx-target="#content" hx-swap="innerHTML">Delete</button>
+    <div id="controls" class="navbar">
+        <button class="btn btn-primary" hx-get="/templates/{{ template.id }}/edit" hx-target="#template">Edit</button>
+        <button class="btn btn-outline btn-error" hx-delete="/templates/{{ template.id }}" hx-push-url="/templates" hx-target="#content" hx-swap="innerHTML">Delete</button>
     </div>
     <div id="template">
         <templates.EditTemplateForm template={{ template }} />
