--- a/almostauto-web/src/almostauto/web/components/templates/EditTemplateForm.jinja
+++ b/almostauto-web/src/almostauto/web/components/templates/EditTemplateForm.jinja
@@ -1,7 +1,7 @@
 {#def template #}
 
 <form hx-put="/templates/{{ template.id }}" hx-target="#template" hx-ext="json-enc">
-    <label for="title">Title</label>
-    <input name="title" type="text" value="{{ template.title }}">
-    <button type="submit">Submit</button>
+    <label for="title" class="label">Title</label>
+    <input name="title" type="text" value="{{ template.title }}" class="input-bordered">
+    <button class="btn btn-primary" type="submit">Save</button>
 </form>
